--- a/datasets/Part 1 - Artificial Neural Networks (ANN)/ann_theory_2.ipynb
+++ b/datasets/Part 1 - Artificial Neural Networks (ANN)/ann_theory_2.ipynb
@@ -33,6 +33,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "El **valor actual** (y) es el valor que debería dar, y el **valor de salida** ($\\hat{y}$) es que nos saca la ANN.\n",
+    "\n",
+    "La **función de costes** (C) nos indica cuán alejado está el valor obtenido ($\\hat{y}$) y el real (y). En la imágen vemos la forma típica de determinar dicha función, pero hay más *(todas tienen que ser convexas)*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../img/funcionamiento_3.jpg\" width=\"700\">"
    ]
   },
@@ -40,21 +49,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcionamiento_4.jpg\" width=\"700\">"
+    "El valor de la función de costes se vuelve a introducir en la neurona y de ahí hacia los pesos. Estos pesos se cambiarán para minimizar el valor de esta función."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcionamiento_5.jpg\" width=\"800\">"
+    "<img src=\"../img/funcionamiento_4.jpg\" width=\"800\">"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
