--- a/datasets/Part 1 - Artificial Neural Networks (ANN)/ann_theory_3.ipynb
+++ b/datasets/Part 1 - Artificial Neural Networks (ANN)/ann_theory_3.ipynb
@@ -4,7 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Optimización de la función de costes (C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **1-**\n",
+    "\n",
+    "Medir la pendiente de la función de costes mediante. Si es positiva, la \"pelota\" estará apuntando hacia abajo (y viceversa). Nuestro objetivo es conseguir una pendiente 0 (abajo del todo)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../img/gradiente_descendente_1.jpg\" width=\"700\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **2-**\n",
+    "**El método descendente estocástico**: Vamos dándo una cierta aleatoriedad a la hora de buscar, ya que si la función de costes no es convexa, nos podríamos quedar en un mínimo relativo y no en el absoluto.\n",
+    "    "
    ]
   },
   {
@@ -25,7 +50,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Gradiente Descendente por bloques:** Sería si una vez que le damos toda la información a la neurona y esta nos da una salida, aplicaramos una vez la función de costes y se corrigieran todos los pesos a la vez.\n",
+    "\n",
+    "**Gradiente Descendente Estocástico:** La correción de la función de costes y su consiguiente correción en los pesos se va aplicando poco a poco.\n",
+    "\n",
+    "**Fusión de ambos:** Coge lo mejor de los anteriores, coge pequeños bloques y los va pasando."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../img/gradiente_descendente_4.jpg\" width=\"700\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Resumen de una RNA**"
    ]
   },
   {
