--- a/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn_theory_1.ipynb
+++ b/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn_theory_1.ipynb
@@ -4,110 +4,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/neurona.jpg\" width=\"800\">"
+    "# Paso 1- Convolución"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcion_activacion_1.jpg\" width=\"800\">"
+    "<img src=\"../img/convolucion_1.jpg\" width=\"600\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1º Paso -** En la neurona se van a sumar los productos de cada peso por el valor de entrada respectivo\n",
-    "\n",
-    "**2º Paso -** Luego al resultado del primer paso se le multiplica una **función de activación**."
+    "<img src=\"../img/convolucion_2.jpg\" width=\"700\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Funciones de activación:"
+    "## Capa ReLU"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcion_activacion_2.jpg\" width=\"500\">"
+    "<img src=\"../img/convolucion_3.jpg\" width=\"800\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En la función escalón o se activa la neurona o no se activa. Lo valores por encima de $0$ se hacen automáticamente $1$ y los valores negativos se hacen cero."
+    "# Paso 2 - Max Pooling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcion_activacion_3.jpg\" width=\"500\">"
+    "<img src=\"../img/pooling_1.jpg\" width=\"800\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Es una función continua y derivable.\n",
-    "* Transforma los valores muy negativos a aproximandamente $0$ y los muy positivos a $1$\n",
-    "* Nos permite verla como una probabilidad (entre 0 y 1)"
+    "<img src=\"../img/pooling_2.jpg\" width=\"800\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcion_activacion_4.jpg\" width=\"500\">"
+    "# Paso 3 - Flattening"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Es muy popular en las NNA, ya que transforma todo lo negativo a $0$ y los positivos se consevan como tal (no van a $1$ directamente como pasaba en la función escalón)."
+    "<img src=\"../img/flattening.jpg\" width=\"500\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcion_activacion_5.jpg\" width=\"500\">"
+    "# Paso 4 - Full Connection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Es como la *sigmoidea* con la diferencia que va desde $-1$ a $1$.\n",
-    "* Es útil cuando necesitamos aplicaciones con valores negativos."
+    "<img src=\"../img/connection.jpg\" width=\"700\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcion_activacion_6.jpg\" width=\"800\">"
+    "## Softmax"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../img/funcion_activacion_7.jpg\" width=\"800\">"
+    "<img src=\"../img/softmax.jpg\" width=\"700\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Cada capa podría tener una función de activación diferente si así lo queremos."
+    "## Cross-Entropy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../img/entropia_1.jpg\" width=\"200\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../img/entropia_2.jpg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../img/entropia_3.jpg\" width=\"700\">"
    ]
   },
   {
