--- a/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn_theory.ipynb
+++ b/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn_theory.ipynb
@@ -18,7 +18,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "El **Detector de Rasgos** es una especie de \"filtro\" que rastrea la imágen de entrada y nos dice la cantidad de casillas que coinciden con dicho filtro(el filtro se mueve celda a celda sobre la imagen)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../img/convolucion_2.jpg\" width=\"700\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si aplicamos muchos *Mapas de Características* con diferentes *Detectores de Rasgos* que busquen diferentes rasgos de lo que queremos buscar, obtenemos una **Capa de Convolución**. "
    ]
   },
   {
@@ -39,6 +53,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Se aplica una función **Re**ctificadora **L**ineal **U**nitaria. Ya que al aplicar el filtro lo que en el fondo hacemos es una transformación lineal, cuando en la vida real no es así. \n",
+    "\n",
+    "El objetivo de aplicar una **capa ReLU** es separar todo lo que no sea la linealidad de nuestra red neuronal. Las fronteras entre los rasgos suelen ser no-lineales.\n",
+    "\n",
+    "En definitiva, lo que nos interesa es resaltar los rasgos no-lineales."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Paso 2 - Max Pooling"
    ]
   },
@@ -47,6 +72,13 @@
    "metadata": {},
    "source": [
     "<img src=\"../img/pooling_1.jpg\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con **Max Pooling** nos quedamos con el valor más grande del *mapa de caractarísticas*. Esto sirve para que cuando pongamos imagenes que hagan referencia a los mismo (ej: un guepardo) podremos hacer que reconozca este animal, esté girado, rotado o lo que sea."
    ]
   },
   {
@@ -102,6 +134,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La suma de las probabilidades de que salga perro o gato no tienen porqué dar 1, pero si aplicamos una funación **Softmax** si. Esta función es una función exponencial normalizada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Cross-Entropy"
    ]
   },
@@ -110,6 +149,13 @@
    "metadata": {},
    "source": [
     "<img src=\"../img/entropia_1.jpg\" width=\"200\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es una forma de medir el error. Como vemos abajo $p=1$ sería el valor que sabemos que es cierto y $q=0.9$ el valor que nos da."
    ]
   },
   {
