--- a/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn.ipynb
+++ b/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,10 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#- filtres=32 detectores de características(filtros) \n",
+    "#- kernel_size= (3,3) son filtros de 3x3\n",
+    "#- input_shape es el tamaño de las imagenes (filas, columnas, canales de color)\n",
+    "#- activation es poner la función de activación para despertar las neuronas una vez aplicada al convolución\n",
     "classifier.add(Conv2D(filters = 32,kernel_size = (3, 3), \n",
     "                      input_shape = (64, 64, 3), activation = \"relu\"))"
    ]
@@ -81,20 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#-pool_size es la matriz 2x2 del Max Pooling\n",
     "classifier.add(MaxPooling2D(pool_size = (2,2)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Una segunda capa de convolución y max pooling\n",
+    "\n",
     "classifier.add(Conv2D(filters = 32,kernel_size = (3, 3), activation = \"relu\"))\n",
     "\n",
     "classifier.add(MaxPooling2D(pool_size = (2,2)))"
@@ -109,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,21 +131,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# -units es el numero de nodos que añadimos a la capa oculta(se suele poner la media entre las entradas y el nodo de salida)\n",
+    "# -Kernel_initializer para elegir la funcion que usaran los pesos\n",
+    "# -activation es la funcion de activacion para activar en la capa oculta (relu=rectificador lineal unitario)\n",
     "classifier.add(Dense(units = 128, activation = \"relu\"))\n",
     "classifier.add(Dense(units = 1, activation = \"sigmoid\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compilar la CNN\n",
+    "\n",
+    "# -optimizer se encarga de buscar el conjunto optimo de pesos, usamos el algortimo adam\n",
+    "# -loss es la funcion de perdidas, la que minimiza el error\n",
+    "# -metrics es la metrica (la binaria de cross entropy en este caso ya que es perro o gato)\n",
+    "\n",
     "classifier.compile(optimizer = \"adam\", loss = \"binary_crossentropy\", metrics = [\"accuracy\"])"
    ]
   },
@@ -161,22 +175,18 @@
      "text": [
       "Found 8000 images belonging to 2 classes.\n",
       "Found 2000 images belonging to 2 classes.\n",
-      "Epoch 1/5\n",
-      "100/100 [==============================] - 268s 3s/step - loss: 0.6906 - accuracy: 0.5303 - val_loss: 0.7062 - val_accuracy: 0.6146\n",
-      "Epoch 2/5\n",
-      "100/100 [==============================] - 247s 2s/step - loss: 0.6789 - accuracy: 0.5722 - val_loss: 0.6522 - val_accuracy: 0.6360\n",
-      "Epoch 3/5\n",
-      "100/100 [==============================] - 233s 2s/step - loss: 0.6520 - accuracy: 0.6191 - val_loss: 0.5338 - val_accuracy: 0.6714\n",
-      "Epoch 4/5\n",
-      "100/100 [==============================] - 246s 2s/step - loss: 0.6363 - accuracy: 0.6397 - val_loss: 0.5979 - val_accuracy: 0.6159\n",
-      "Epoch 5/5\n",
-      "100/100 [==============================] - 242s 2s/step - loss: 0.6462 - accuracy: 0.6328 - val_loss: 0.6143 - val_accuracy: 0.6416\n"
+      "Epoch 1/3\n",
+      "100/100 [==============================] - 272s 3s/step - loss: 0.6006 - accuracy: 0.6744 - val_loss: 0.5569 - val_accuracy: 0.6480\n",
+      "Epoch 2/3\n",
+      "100/100 [==============================] - 279s 3s/step - loss: 0.5823 - accuracy: 0.6856 - val_loss: 0.5279 - val_accuracy: 0.6902\n",
+      "Epoch 3/3\n",
+      "100/100 [==============================] - 242s 2s/step - loss: 0.5559 - accuracy: 0.7194 - val_loss: 0.4313 - val_accuracy: 0.7371\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x7f969c264050>"
+       "<keras.callbacks.callbacks.History at 0x7f9a2c05a3d0>"
       ]
      },
      "execution_count": 12,
@@ -187,18 +197,22 @@
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
+    "#lo de abajo es copiado-pegado de https://keras.io/preprocessing/image/. Con esto realizamos cambios\n",
+    "#aleatorios a nuestras imagenes de training para que busquen patrones, en definitva realizamos \n",
+    "#transofrmaciones a nuestras imagenes. Asi la NN tendrá mas info para aprender.\n",
+    "\n",
     "train_datagen = ImageDataGenerator(\n",
-    "        rescale=1./255,\n",
+    "        rescale=1./255, #transforma los px's en vez de 0 a 255 de 0 a 1\n",
     "        shear_range=0.2,\n",
     "        zoom_range=0.2,\n",
-    "        horizontal_flip=True)\n",
+    "        horizontal_flip=True) #volteo horizontal\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale=1./255)\n",
     "\n",
     "training_dataset = train_datagen.flow_from_directory('dataset/training_set',\n",
     "                                                    target_size=(64, 64),\n",
-    "                                                    batch_size=32,\n",
-    "                                                    class_mode='binary')\n",
+    "                                                    batch_size=32, #cantidad de imagenes que pasaran por la NN antes de volver a cargar los pesos\n",
+    "                                                    class_mode='binary') #perros o gatos por eso binario\n",
     "\n",
     "testing_dataset = test_datagen.flow_from_directory('dataset/test_set',\n",
     "                                                target_size=(64, 64),\n",
@@ -207,7 +221,7 @@
     "\n",
     "classifier.fit_generator(training_dataset,\n",
     "                        steps_per_epoch=100,\n",
-    "                        epochs=5,\n",
+    "                        epochs=3,\n",
     "                        validation_data=testing_dataset,\n",
     "                        validation_steps=2000)"
    ]
@@ -221,22 +235,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El animal de la foto es un perro\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from keras.preprocessing import image\n",
-    "test_image = image.load_img('dataset/single_prediction/cat_or_dog_1.jpg', target_size = (64, 64))\n",
+    "test_image = image.load_img('dataset/single_prediction/nauka.jpg', target_size = (64, 64))\n",
     "test_image = image.img_to_array(test_image)\n",
     "test_image = np.expand_dims(test_image, axis = 0)\n",
     "result = classifier.predict(test_image)\n",
     "training_dataset.class_indices\n",
     "if result[0][0] == 1:\n",
-    "    prediction = 'dog'\n",
+    "    prediction = 'perro'\n",
     "else:\n",
-    "    prediction = 'cat'"
+    "    prediction = 'gato'\n",
+    "\n",
+    "print(\"El animal de la foto es un \" + prediction)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
