--- a/datasets/Part 1 - Artificial Neural Networks (ANN)/ann_theory_1.ipynb
+++ b/datasets/Part 1 - Artificial Neural Networks (ANN)/ann_theory_1.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Organización del tipo de Redes Neuronales del curso:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../img/redes_neuronales.jpg\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../img/neurona.jpg\" width=\"800\">"
    ]
   },
