--- a/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn_homework_solution.ipynb
+++ b/datasets/Part 2 - Convolutional Neural Networks (CNN)/cnn_homework_solution.ipynb
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing the Keras libraries and packages\n",
     "from keras.models import Sequential\n",
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,9 +150,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 8000 images belonging to 2 classes.\n",
+      "Found 2000 images belonging to 2 classes.\n",
+      "Epoch 1/5\n",
+      "100/100 [==============================] - 288s 3s/step - loss: 0.6926 - accuracy: 0.5159 - val_loss: 0.6792 - val_accuracy: 0.5096\n",
+      "Epoch 2/5\n",
+      "100/100 [==============================] - 260s 3s/step - loss: 0.6655 - accuracy: 0.5900 - val_loss: 0.6712 - val_accuracy: 0.6464\n",
+      "Epoch 3/5\n",
+      "100/100 [==============================] - 259s 3s/step - loss: 0.6212 - accuracy: 0.6578 - val_loss: 0.6960 - val_accuracy: 0.6366\n",
+      "Epoch 4/5\n",
+      "100/100 [==============================] - 251s 3s/step - loss: 0.5867 - accuracy: 0.6875 - val_loss: 0.4437 - val_accuracy: 0.7204\n",
+      "Epoch 5/5\n",
+      "100/100 [==============================] - 254s 3s/step - loss: 0.5685 - accuracy: 0.7022 - val_loss: 0.4350 - val_accuracy: 0.7123\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x7f95e8356b10>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
@@ -166,8 +203,8 @@
     "                                            class_mode = 'binary')\n",
     "\n",
     "classifier.fit_generator(training_set,\n",
-    "                         steps_per_epoch = 8000,\n",
-    "                         epochs = 25,\n",
+    "                         steps_per_epoch =100,\n",
+    "                         epochs = 5,\n",
     "                         validation_data = test_set,\n",
     "                         validation_steps = 2000)"
    ]
