--- a/datasets/Part 1 - Artificial Neural Networks (ANN)/ann.ipynb
+++ b/datasets/Part 1 - Artificial Neural Networks (ANN)/ann.ipynb
@@ -355,7 +355,10 @@
     "# -activation es la funcion de activacion para activar en la capa oculta (relu=rectificador lineal unitario)\n",
     "# -input_dim son los nodos de entrada\n",
     "classifier.add(Dense(units = 6, kernel_initializer = \"uniform\",  activation = \"relu\", input_dim = 11)) \n",
-    "classifier.add(Dropout(p = 0.1)) #para evitar el overfitting\n",
+    "#Añadimos Dropout (para evitar el sobreajuste, para desactivar las neuronas de la capa inmediatamente \n",
+    "#anteior y que solo un porcentaje de ellas pasen adelante, evitando así el overfitting)\n",
+    "classifier.add(Dropout(p = 0.1)) #un 10% de las neuronas se desactivaran, se ingorara su valor durante la fase de training \n",
+    "\n",
     "\n",
     "# Añadir la segunda capa oculta\n",
     "classifier.add(Dense(units = 6, kernel_initializer = \"uniform\",  activation = \"relu\"))\n",
@@ -541,13 +544,7 @@
       "8000/8000 [==============================] - 1s 113us/step - loss: 0.4304 - accuracy: 0.8249\n",
       "Epoch 77/100\n",
       "8000/8000 [==============================] - 1s 126us/step - loss: 0.4271 - accuracy: 0.8223\n",
-      "Epoch 78/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 78/100\n",
       "8000/8000 [==============================] - 1s 111us/step - loss: 0.4294 - accuracy: 0.8231\n",
       "Epoch 79/100\n",
       "8000/8000 [==============================] - 1s 133us/step - loss: 0.4282 - accuracy: 0.8238\n",
@@ -872,13 +869,7 @@
       "7200/7200 [==============================] - 0s 43us/step - loss: 0.6063 - accuracy: 0.7957\n",
       "Epoch 1/1\n",
       "7200/7200 [==============================] - 0s 43us/step - loss: 0.5885 - accuracy: 0.7961\n",
-      "Epoch 1/1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1/1\n",
       "8000/8000 [==============================] - 0s 54us/step - loss: 0.5627 - accuracy: 0.7947\n"
      ]
     }
