--- a/datasets/Part 3 - Recurrent Neural Networks (RNN)/rnn.ipynb
+++ b/datasets/Part 3 - Recurrent Neural Networks (RNN)/rnn.ipynb
@@ -211,14 +211,16 @@
    "source": [
     "# Crear una estructura de datos con 60 timesteps y 1 salida\n",
     "\n",
-    "# Los 60 timesteps indica que la RNR será capaz de mirar 60 precios atrás(1 trimestre), \n",
-    "# 60 precios antes del día actual.\n",
+    "# Los 60 timesteps indica que la RNR será capaz de mirar 60 precios atrás, \n",
+    "# 60 precios antes del día actual y predecir la del día siguiente.\n",
     "\n",
     "X_train = []\n",
     "y_train = []\n",
-    "for i in range(60, 1258):\n",
-    "    X_train.append(training_set_scaled[i-60:i, 0])\n",
-    "    y_train.append(training_set_scaled[i, 0])\n",
+    "for i in range(60, 1258): #creamos grupos de 60\n",
+    "    X_train.append(training_set_scaled[i-60:i, 0]) #entrenamos filas (0,59), (1,60), (2,61)....\n",
+    "    y_train.append(training_set_scaled[i, 0]) # para predecir (60), (61), (62)....\n",
+    "\n",
+    "#REconvertimos los resultados a matrices de numpy    \n",
     "X_train, y_train = np.array(X_train), np.array(y_train)\n"
    ]
   },
@@ -228,7 +230,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Redimensión de los datos\n",
+    "# Redimensión de los datos \n",
+    "\n",
+    "# A parte de tener en cada fila corresponde a 60 dias naturales\n",
+    "# las columnas van corriendo día a día en el tiempo, y en profundiad por ejemplo podríamos\n",
+    "# meter las acciones de otra empresa.\n",
+    "\n",
+    "#Queremos cabiar el X_train y añadir una dimensión de profundidad(x,y, ->z<- )\n",
     "X_train = np.reshape(X_train, (X_train.shape[0], X_train.shape[1], 1))"
    ]
   },
@@ -264,7 +272,9 @@
    "outputs": [],
    "source": [
     "# Inicialización del modelo\n",
-    "regressor = Sequential()"
+    "regressor = Sequential()\n",
+    "# la llamamos regressor en vez de calssificator como en apartados anteriores porque ahora queremos\n",
+    "# una estimación y no una claisificación (perro/gato)"
    ]
   },
   {
@@ -273,9 +283,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Añadir la primera capa de LSTM y la regulariación por Dropout\n",
+    "# Añadir la primera capa de LSTM y la regulariación por Dropout (para evitar el sobreajuste, para desactivar\n",
+    "# las neuronas de la capa inmediatamente anteior y que solo un porcentaje de ellas pasen adelante, evitando así\n",
+    "# el overfitting)\n",
+    "\n",
+    "# - units es el numero de neuronas de retorno \n",
+    "# - return_sequences es la secuencia de retorno. TRUE si lo queremos apilado(diferentes capas unas tras otras)\n",
+    "# - input_shape es el tamaño de la forma de entrada que tienen los datos\n",
     "regressor.add(LSTM(units = 50, return_sequences = True, input_shape = (X_train.shape[1], 1) ))\n",
-    "regressor.add(Dropout(0.2))\n",
+    "regressor.add(Dropout(0.2))  # un 20% de las neuronas se desactivaran, se ingorara su valor durante la fase de training \n",
     "\n",
     "# Añadir la segunda capa de LSTM y la regulariación por Dropout\n",
     "regressor.add(LSTM(units = 50, return_sequences = True ))\n",
@@ -297,7 +313,7 @@
    "outputs": [],
    "source": [
     "# Añadir la capa de salida\n",
-    "regressor.add(Dense(units = 1))"
+    "regressor.add(Dense(units = 1)) #nos devolvera el valor de la acción final en base a todo lo anterior"
    ]
   },
   {
@@ -307,6 +323,9 @@
    "outputs": [],
    "source": [
     "# Compilar la RNR\n",
+    "\n",
+    "# -optimizer se encarga de buscar el conjunto optimo de pesos, usamos el algortimo adam\n",
+    "# -loss es la funcion de perdidas, la que minimiza el error\n",
     "regressor.compile(optimizer = 'adam', loss = 'mean_squared_error')"
    ]
   },
@@ -511,13 +530,7 @@
       "1198/1198 [==============================] - 5s 4ms/step - loss: 0.0015\n",
       "Epoch 96/100\n",
       "1198/1198 [==============================] - 4s 3ms/step - loss: 0.0013\n",
-      "Epoch 97/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 97/100\n",
       "1198/1198 [==============================] - 5s 4ms/step - loss: 0.0012\n",
       "Epoch 98/100\n",
       "1198/1198 [==============================] - 4s 3ms/step - loss: 0.0013\n",
@@ -541,6 +554,9 @@
    "source": [
     "\n",
     "# Ajustar la RNR al conjunto de entrenamiento\n",
+    "\n",
+    "# -batch_size numero de bloques, procesar dichos bloques y corregir\n",
+    "# -epochs es el numero de iteraciones\n",
     "regressor.fit(X_train, y_train, epochs = 100, batch_size = 32)"
    ]
   },
@@ -813,9 +829,13 @@
    "outputs": [],
    "source": [
     "# Obtener la predicción de la acción con la RNR para Enero de 2017\n",
-    "dataset_total = pd.concat((dataset_train['Open'], dataset_test['Open']), axis = 0)\n",
+    "\n",
+    "dataset_total = pd.concat((dataset_train['Open'], dataset_test['Open']), axis = 0) #por fila\n",
+    "#Metemos los inputs los valores los 60 días atrás para cada día de enero de 2017\n",
+    "# len(dataset_total) - len(dataset_test) nos da el último día de 2016 y le restamos\n",
+    "#60, 60 dias antes. \n",
     "inputs = dataset_total[len(dataset_total) - len(dataset_test) - 60:].values\n",
-    "inputs = inputs.reshape(-1,1)\n",
+    "inputs = inputs.reshape(-1,1) #pasamos del vector fila a columna\n",
     "inputs = sc.transform(inputs)\n",
     "X_test = []\n",
     "for i in range(60, 80):\n",
