--- a/datasets/Part_4_Self_Organizing_Maps_SOM/som_theory.ipynb
+++ b/datasets/Part_4_Self_Organizing_Maps_SOM/som_theory.ipynb
@@ -158,6 +158,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cómo leer un mapa autorganizado SOM avanzado:\n",
+    "\n",
+    "Ejemplo de SOM de patrones en el voto de 535 senadores nortaméricanos\n",
+    "<img src=\"../img/som_9.jpg\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pasos para entrenar un SOM:\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 1:</span> Empezamos con un dataset compuesto de *n_features* variables independientes.\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 2:</span> Preparamos una parrilla compuesta de nodos, cada uno con un vector de pesos de *n_features* elementos.\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 3:</span> Aleatoriamente inicializamos valores del vector de pesos a números pequeños cercanos a $0$ (pero no $0$).\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 4:</span> Seleccionar una observación aleatoria del dataser.\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 5:</span> Calcular la distancia Euclídea desde dicho puntos a las diferentes neuronas de la red.\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 6:</span> Seleccionar la neurona con la menor distancia al punto. Dicha neurona es el nodo ganador.\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 7:</span> Actualizar lso epsos del nodo ganador para moverlo más cerca dle punto.\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 8:</span> Utilizar una función Gaussiana al vecindario del punto de medie el nodo ganador y actualizar los pesos de los vecinos para moverlos más cerca del punto. El radio de los vecinos afectados es la desviación típica de la Gaussiana.\n",
+    "\n",
+    "- <span style='color:#288c17'> <b>PASO 9:</span> Repetir los pasos <span style='color:#288c17'> <b>1</span> a <span style='color:#288c17'> <b>5</span> y actualizar los pesos después de cada observación (*Reinforcement Learning*) o después de un conjunto de observaciones (*Batch Learning*), hasta que la red neuronal converja en un punto donde los vecindarios no cambien."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
