--- a/datasets/Part_4_Self_Organizing_Maps_SOM/mega_case_study.ipynb
+++ b/datasets/Part_4_Self_Organizing_Maps_SOM/mega_case_study.ipynb
@@ -40,7 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parte 1 - Identificar los fraudes potenciales con un SOM"
+    "# Parte 1 - Identificar los fraudes potenciales con un SOM\n",
+    "\n",
+    "*(En este paso procedemos exactamente igual que en el ejercicio anterior)*"
    ]
   },
   {
@@ -152,7 +154,7 @@
    "outputs": [],
    "source": [
     "# Crear la matriz de características\n",
-    "customers = dataset.iloc[:, 1:-1].values"
+    "customers = dataset.iloc[:, 1:-1].values #seleccionamos todas las columnas menos la primera(ID) y la última(si/no)"
    ]
   },
   {
@@ -162,7 +164,10 @@
    "outputs": [],
    "source": [
     "# Crear la variable dependiente\n",
-    "is_fraud = np.zeros(len(dataset))\n",
+    "\n",
+    "is_fraud = np.zeros(len(dataset)) #creamos un vector de 0s de longitud de dataset\n",
+    "\n",
+    "#La salida será marcada como 1(fraude) si aparece en el SOM realizado en el Paso1 dentro de la variable frauds\n",
     "for i in range(len(dataset)):\n",
     "    if dataset.iloc[i, 0] in frauds:\n",
     "        is_fraud[i] = 1"
