--- a/datasets/Part_5_Boltzmann_Machines_BM/bm_theory.ipynb
+++ b/datasets/Part_5_Boltzmann_Machines_BM/bm_theory.ipynb
@@ -92,7 +92,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Abajo en color azúl los nodos de entrada y arriba de color rojo los nodos ocultos. Esquema visto con desplazamiento temporal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../img/bm_5.jpg\" width=\"700\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El algortimo de Boltzmann asignará aleatoriamente unos pesos entre los nodos de entrada y los ocultos. Si cambian los nodos ocultos también cambiarán los nodos de entrada originales. Hay que tener claro que los pesos no cambian aquí. Los datos de los nodos cambiarán en el tiempo, lo que es conocido como el **muestreo de Gibbs**."
    ]
   },
   {
@@ -106,7 +120,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En términos de la curva de la energía se ve lo de arriba. VEmos como cambia el estado del sistema cuando realizamos modificaciones. Siendo $<v_i^0 h_j^0>$ el estado inicial de la capa visible y de la capa oculta respectivamente, $<v_i^{\\infty} h_j^{\\infty}>$, $w_{ij}$ los pesos. \n",
+    "\n",
+    "Vemos que el sistema en cada iteración busca el estado de mínima energía posible (mínimo global)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../img/bm_7.jpg\" width=\"700\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Red de Creencia Profunda (DFN)\n",
+    "\n",
+    "Es una red con máquinas de Boltzmann apiladas, la capa oculta de la primera entrada se convierte en visible para la capa oculta superior y así todo el rato."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../img/bm_8.jpg\" width=\"500\">"
    ]
   },
   {
